--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section id="excursion">
         <div class="container">
             <div class="excursion-box">
-                <div class="box-header">
+                <div class="box-header parallax">
                     <p class="title">
                         экскурсия
                     </p>
